--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@
    --borders: 0px solid black; 
 }
 
+@font-face {
+    font-family: norse;
+    src: url('/Users/AndrewBrown/Library/Fonts/Norse-Bold.otf') format(otf);
+    font-weight: normal;
+    font-style: normal;
+}
 
 
 body{
@@ -27,12 +33,13 @@ body{
 }
 
 .logo img{
-    height: 10vh;
+    height: 12vh;
 }
 
 .logo h1 {
     color: white;
-    font-size: 48px;
+    font-size: 96px;
+    font-family: norse;
 }
 
 .logo {
@@ -45,6 +52,8 @@ body{
     position: absolute;
     bottom: calc((100vh/3)*2);
 }
+
+
 
 .logo_background {
     /* width: calc(100vw/3);
@@ -66,6 +75,23 @@ body{
     border: var(--borders);
     height: calc(100vh/3);
     background-color:whitesmoke;
+    justify-content: center;
+    width:
+}
+
+.form-top-div {
+    display: flex;
+    flex-direction: column;
+    width: 40rem;
+    font-weight: bold;
+}
+
+.form-top p {
+    /* display: flex;
+    flex-wrap: wrap; */
+    margin-left: 50px;
+    font-style: bold;
+    font-size: 24px;
 }
 
 .form {
@@ -73,7 +99,7 @@ body{
     border: var(--borders);
     height: calc(100vh/3);
     box-shadow: 0px 10px 6px rgba(0, 4px, 6px, 0.5);
-    
+    font-weight: 600;
 }
 
 .form p {
@@ -85,7 +111,7 @@ body{
     border: var(--borders);
     height: calc(100vh/3);
     background-color:whitesmoke;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 li {
@@ -106,7 +132,7 @@ fieldset {
 }
 
 button {
-    margin-left: 20px;
+    margin-left: 50px;
     margin-top: 20px;
     background-color: #596D48;
     /* border-radius: 10%; */
@@ -120,7 +146,7 @@ button {
 }
 
 .form-bottom p {
-    margin-left: 20px;
+    margin-left: 50px;
     margin-top: 30px;
 }
 
